--- a/src/components/square/Square.module.scss
+++ b/src/components/square/Square.module.scss
@@ -8,6 +8,8 @@
   border: 1px solid gray;
   line-height: 10px;
   padding: 0;
+  margin-top: -1px;
+  margin-right: -1px;
 
   &:disabled {
     color: #000;
