--- a/src/components/square/Square.module.scss
+++ b/src/components/square/Square.module.scss
@@ -1,22 +1,28 @@
 .button {
-  height: 50px;
-  width: 50px;
+  height: 80px;
+  width: 80px;
   text-align: center;
-  font-size: 30px;
+  font-size: 36px;
   border-radius: 0;
   background-color: #fff;
-  border: 1px solid gray;
-  line-height: 10px;
+  border: 1px solid #c5c5c5;
+  line-height: 6px;
   padding: 0;
   margin-top: -1px;
   margin-right: -1px;
+  cursor: pointer;
+  transition: all 0.4s;
 
   &:disabled {
     color: #000;
     cursor: not-allowed;
   }
 
+  &:hover {
+    background-color: #ececec;
+  }
+
   &.red {
-    background-color: red;
+    background-color: #aaddda;
   }
 }
