--- a/src/globalStyles/globalStyles.scss
+++ b/src/globalStyles/globalStyles.scss
@@ -1,4 +1,11 @@
+body {
+  font-family: 'Inclusive Sans', sans-serif;
+  background-color: #ececec;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+}
+
 .flex {
   display: flex;
-  flex-flow: row nowrap;
 }
